# solutionbuilder_core

./: .gitignore  .replit  BRAND_GUIDELINES.md  IMPLEMENTATION_STATUS.md  README.md  SETUP.md  branding.json  env.example  pyproject.toml  replit.md  run_dev.bat  run_dev.sh
.cursor/rules/: solutionbuilder-core.mdc
backend/: ERROR_FIXES.md  MCP_PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_TEST_RESULTS.md  README.md  env.example  install_mcp_servers.bat  install_mcp_servers.sh  main.py  requirements.txt  setup.bat  setup.sh  setup_amazon_linux3.sh  start-no-reload.bat  start.bat  start.sh  test_diagram_mcp.py  test_diagram_simple.py  test_simple_diagram.py  web_service
docs/: AMAZON_LINUX_3_SETUP.md  CLEANUP_SUMMARY.md  DIAGRAM_MCP_SERVER_FINDINGS.md  FRONTEND_TROUBLESHOOTING.md  MCP_POOL_IMPLEMENTATION.md  README.md  UI_IMPROVEMENTS_ANALYSIS.md  UI_IMPROVEMENTS_IMPLEMENTED.md  UI_IMPROVEMENTS_QUICK_REFERENCE.md  UI_IMPROVEMENTS_SUMMARY.md  implementation_plan_session_context.md  mcp_troubleshooting.md  product_tracker.md
frontend/: README.md  UI_SETUP.md  debug-test.js  diagnose_frontend.sh  index.html  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js  vite.config.ts
prompts/: README.md  prompt_tracker.md
tests/: README.md  conftest.py  pytest.ini  requirements.txt  test_adaptive_prompt_generator.py  test_api.py  test_cloudformation_parser.py  test_context_extractor.py  test_follow_up_detector.py  test_integration.py  test_integration_mcp.py  test_quality_validator.py  test_question_classifier.py  test_security.py  test_session_manager.py
(+61 files in other folders)
